Added CSS comments and modifications to simply code

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- Adding a better title to Website and metafile viewport -->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -8,6 +9,7 @@
     <title>Horiseon Website</title>
 </head>
 
+<!-- Changed the complete HTML structure to follow semantic elements and order  -->
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -31,7 +33,7 @@
     <figure>
     <section class="hero"> </section>
     </figure>
-    
+    <!-- Added id attribute in order to correct the broken link @ the nav bar -->
     <section class="content">
         <section id="search-engine-optimization"class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
